--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,4 +1,4 @@
-@media (min-width: 375px) {
+@media (min-width: 320px) {
   .hero-container {
     padding: 0 20%;
     color: #42be08;
